# decree

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pymarkdown.json  .pymarkdown.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RULES.md  SECURITY.md  mypy.ini  noxfile.py  pyproject.toml  ruff.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: apt.yml  ci.yml  python-publish.yml  release.yml
doc/adr/: 0001-record-architecture-decisions.md  0002-language-and-runtime-python-311-plus.md  0003-status-enum-with-strenum.md  0004-date-and-time-policy.md  0005-directory-layout-doc-adr.md  0006-template-strategy-and-overrides.md  0007-parity-policy-with-adr-tools.md  0008-testing-approach-pytest-real-fs.md  0009-typing-strategy-mypy-strict-beartype-public.md  0010-packaging-and-build-with-uv.md  0011-distribution-pypi-homebrew-apt.md  0012-ci-cd-with-github-actions.md  0013-licensing-and-third-party-snippets.md  0014-telemetry-policy-none.md  0015-markdown-linting-with-pymarkdown.md  0016-bidirectional-adr-linking.md  0017-cli-coverage-measurement.md  0018-avoid-getattr-for-standard-library-constants.md
packaging/apt/: README.md
packaging/apt/conf/: distributions
packaging/apt/scripts/: build_deb.sh  publish_repo.sh
packaging/homebrew/Formula/: decree.rb
scripts/: __init__.py  set_version_from_tag.py  verify_tag_matches_version.py
src/decree/: __init__.py  __main__.py  cli.py  core.py  exitcodes.py  models.py  templates.py  title.py  utils.py
src/dev/: __init__.py  __main__.py  cli.py
tests/: __init__.py  conftest.py  test_cli_init.py  test_cli_main.py  test_cli_new_date.py  test_cli_success_paths.py  test_date_envs.py  test_exitcodes.py  test_linking.py  test_new_list_toc.py  test_new_template_env.py  test_slugify.py
tests/cli/: test_exit_codes.py  test_title.py
tests/decree/: __init__.py  conftest.py  test_cli_main.py  test_cli_new_date.py  test_cli_success_paths.py  test_exitcodes.py  test_new_list_toc.py  test_new_template_env.py  test_slugify.py
tests/decree/cli/: __init__.py  test_exit_codes.py  test_title.py
tests/decree/unit/: test_title_module.py
tests/dev/: __init__.py  test_dev_cli.py
tests/unit/: __init__.py  test_title_module.py
tickets/: T001-adr-template-env-override.md  T002-date-consistency-on-new.md  T003-link-behavior-and-reverse-tests.md  T004-cli-exit-codes-coverage.md  T005-pypi-trusted-publishing-setup.md  T006-homebrew-tap-formula.md  T007-apt-repo-secrets-and-loopback.md  T008-parity-deviation-log.md  T009-slug-parity-edge-cases-tests.md  T010-windows-newlines-and-paths-doc-check.md  T011-cli-help-snapshots.md  T012-upgrade-repository-idempotent-test.md  T013-precommit-reliability-markdownlint.md  T014-project-urls-and-metadata.md  T015-readme-install-notes-and-graph-note.md
