[build-system]
requires = ["uv-build>=0.3.0"]
build-backend = "uv_build"

[project]
name = "decree"
version = "0.1.0"  # updated from tag
description = "Decree: Python 3.11+ reimplementation of adr-tools with a typed API and Typer CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Steven Cutting" }]
classifiers = [
"License :: OSI Approved :: BSD License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Environment :: Console",
"Topic :: Documentation",
]
dependencies = [
"typer>=0.12.0",
"beartype>=0.18.5",
]

[project.optional-dependencies]
dev = [
"pytest>=8.2",
"pytest-cov>=5.0",
"coverage>=7.6",
"nox>=2024.4.15",
"ruff>=0.6.9",
"mypy>=1.11",
"types-setuptools",
"types-python-dateutil",
"codespell>=2.3.0",
"markdownlint-cli2>=0.14.0",
"yamllint>=1.35.1",
]

[project.scripts]
decree = "decree.cli:main"

[tool.uv]
[tool.uv.pip]
generate-hashes = true

[tool.ruff]
extend = "ruff.toml"

[tool.mypy]

# see mypy.ini

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
